--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,8 @@ Django==2.0.6
 djangorestframework==3.8.2
 pytz==2018.4
 PyJWT==1.5.3
+
 flake8==3.4.1
+mccabe==0.6.1
+pycodestyle==2.3.1
+pyflakes==1.5.0
