--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
 Django==2.0.6
 djangorestframework==3.8.2
 pytz==2018.4
+
 PyJWT==1.5.3
 
 flake8==3.4.1
 mccabe==0.6.1
 pycodestyle==2.3.1
 pyflakes==1.5.0
+
+celery==4.2.1
+amqp==2.3.2
+billiard==3.5.0.4
+kombu==4.2.1
+vine==1.1.4
+
+redis==2.10.6
