--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,23 @@ kombu==4.2.1
 vine==1.1.4
 
 redis==2.10.6
+
+django-push-notifications==1.6.0
+apns2==0.4.1
+asn1crypto==0.24.0
+certifi==2018.4.16
+cffi==1.11.5
+chardet==3.0.4
+cryptography==2.3
+h2==2.6.2
+hpack==3.0.0
+http-ece==1.0.5
+hyper==0.7.0
+hyperframe==3.2.0
+idna==2.7
+py-vapid==1.4.0
+pycparser==2.18
+pywebpush==1.7.0
+requests==2.19.1
+six==1.11.0
+urllib3==1.23
