--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,18 +3,21 @@ version: "3.6"
 services:
   db:
     image: postgres
+    ports:
+      - "5432:5432"
     volumes:
-      - db:/postgresql/data
+      - db:/var/lib/postgresql/data
 
   redis:
     image: redis:alpine
-    expose:
-      - "6379"
+    ports:
+      - "6379:6379"
 
   web:
     environment:
       - DEBUG=1
       - DJANGO_SECRET_KEY='v2fn-i#fn_onr=@t^ouf+gh_dk^&d8_pw^hwcq%og%65ps6dh+'
+      - REDIS_HOST=redis
     build: .
     image: app/web
     command: python3 manage.py runserver 0.0.0.0:8000
@@ -30,6 +33,7 @@ services:
     environment:
       - DEBUG=1
       - DJANGO_SECRET_KEY='v2fn-i#fn_onr=@t^ouf+gh_dk^&d8_pw^hwcq%og%65ps6dh+'
+      - REDIS_HOST=redis
     image: app/web
     command: celery worker --app=todoshka
     depends_on:
@@ -40,8 +44,9 @@ services:
     environment:
       - DEBUG=1
       - DJANGO_SECRET_KEY='v2fn-i#fn_onr=@t^ouf+gh_dk^&d8_pw^hwcq%og%65ps6dh+'
+      - REDIS_HOST=redis
     image: app/web
-    command: celery beat --app=todoshka -s /home/celery/var/run/celerybeat-schedule
+    command: celery beat --app=todoshka
     depends_on:
       - redis
 
