Add nginx configuration file and collectstatic to docker compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,36 @@
 version: "3.6"
 
+x-nginx-conf: &x-nginx-conf |
+  upstream web {
+    server web:8000;
+  }
+
+  server {
+
+    location /static/ {
+      autoindex on;
+      alias /static/;
+    }
+
+    location / {
+      proxy_pass http://web/;
+    }
+    listen 8000;
+    server_name localhost;
+  }
+
+
 services:
   nginx:
-    image: nginx
+    environment:
+      NGINX_CONF: *x-nginx-conf
+    image: nginx:latest
+    command: sh -c 'echo "$${NGINX_CONF}" > /etc/nginx/conf.d/default.conf && exec nginx -g "daemon off;"'
     ports:
       - "8000:8000"
+    volumes:
+      - ./config/nginx:/etc/nginx/conf.d
+      - ./todoshka/static:/static
     depends_on:
       - web
 
@@ -27,9 +53,10 @@ services:
       - REDIS_HOST=redis
     build: .
     image: app/web
-    command: bash -c "python3 manage.py makemigrations && python manage.py migrate && gunicorn todoshka.wsgi -b 0.0.0.0:8000"
+    command: bash -c "python3 manage.py makemigrations && python manage.py migrate && python manage.py collectstatic --noinput && gunicorn todoshka.wsgi -b 0.0.0.0:8000"
     volumes:
       - .:/app
+      - ./todoshka/static:/static
     expose:
       - "8000"
     depends_on:
@@ -60,3 +87,4 @@ services:
 volumes:
   db:
   web:
+  nginx:
